version/0.18/_sources/api/solver/_autosummary/settings/recirculation_inlet.rst.txt
:orphan:

.. _recirculation_inlet:

recirculation_inlet
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.recirculation_inlet.recirculation_inlet
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`recirculation_inlet_child <recirculation_inlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

